# tunetape

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
Formula/: tunetape.rb
tests/: conftest.py  test_art_debug.py  test_config.py  test_history.py  test_khinsider_parser.py  test_network.py  test_paths.py  test_playlist.py  test_regex.py  test_spotify_parser.py  test_ui_format.py  test_urls.py  test_youtube_playlist.py
tests/fixtures/: album.html  spotify_playlist.html  spotify_track.html  track.html  yt_flat_playlist.txt
tunetape/: __init__.py  __main__.py  art.py  config.py  debug.py  history.py  khinsider.py  models.py  paths.py  player.py  playlist.py  spotify.py  ui.py
